--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pythonsnip"
 version = "0.1.0"
-description = ""
-authors = ["azerv1 <asterioszer@gtest3ddawmail.com>"]
+description = "convert python code to vs code snippets"
+authors = ["azerv1 <asterioszer@gmail.com>"]
 
 readme = "README.md"
 
